# chemical-roles

./: .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  curate_chebi_relations.py  curate_mesh_relations.py  generate_export.py  get_wikidata_mappings.py  lint.py  pyproject.toml  requirements.txt  setup.cfg  sort_xrefs.py  tox.ini  utils.py
.github/workflows/: tests.yml
art/: README.md
chiro/: chiro_import.tsv  import_chiro.py
docs/: index.md
docs/_data/: crog.indra.json  crog.obo  curated_summary_by_modulation.tsv  curated_summary_by_namespace.tsv  curated_summary_by_type.tsv  inferred_summary.tsv  inferred_summary_by_modulation.tsv  inferred_summary_by_namespace.tsv  inferred_summary_by_type.tsv
export/: README.md  curated_summary.tsv  curated_summary_by_modulation.tsv  curated_summary_by_namespace.tsv  curated_summary_by_type.tsv  enzymes.tsv  inferred_summary.tsv  inferred_summary_by_modulation.tsv  inferred_summary_by_namespace.tsv  inferred_summary_by_type.tsv  pathways.tsv  relations.tsv  relations_summary.tsv
resources/: inhibitors.tsv  irrelevant_roles.tsv  reclassification.tsv  relations.tsv  uncurated.tsv  uncurated_chebi.tsv  uncurated_mesh.tsv  wd_chemicals.tsv  wd_proteins.tsv  xrefs.tsv
src/chemical_roles/: __init__.py  __main__.py  cli.py  constants.py  curate_chebi_relations.py  curate_mesh_relations.py  generate_export.py  get_wikidata_mappings.py  lint.py  utils.py
src/chemical_roles/curate/: __init__.py  chebi.py  cli.py  mesh.py
src/chemical_roles/export/: __init__.py  bel.py  build.py  cli.py  generate_export.py  obo.py  utils.py
src/chemical_roles/resources/: __init__.py  blacklist.tsv  irrelevant_roles.tsv  relations.tsv  uncurated_chebi.tsv  xrefs.tsv
