##########################
# Setup.py Configuration #
##########################
[metadata]
name = chemical_roles
version = 0.0.1-dev
description = Connecting chemical roles to their targets
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/chemical-roles/chemical-roles
download_url = https://github.com/chemical-roles/chemical-roles/releases
project_urls =
    Bug Tracker = https://github.com/chemical-roles/chemical-roles/issues
    Source Code = https://github.com/chemical-roles/chemical-roles

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
keywords =
    cthoyt
    cookiecutter

[options]
install_requires =
    click
    more_click
    pandas
    requests
    bioregistry
    pyobo

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs
    texext
export =
    matplotlib
    networkx
    pandas
    seaborn
    pyobo
    pybel>=0.15.2

[options.entry_points]
console_scripts =
    chemical_roles = chemical_roles.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = chemical_roles
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/chemical_roles
    .tox/*/lib/python*/site-packages/chemical_roles

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
# (formerly in tox.ini) #
#########################
[flake8]
ignore =
    S310
    # line break before binary operator
    W503
    # XML stuff
    S405
    # XML stuff
    S314
    I202
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs
max-complexity = 25
max-line-length = 120
import-order-style = pycharm
application-import-names =
    chemical_roles
